<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/matches_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/matches_date"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/matches_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/matches_town"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/matches_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/matches_country"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/matches_sport_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/matches_sport_id"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/matches_type_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/matches_single"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/matches_participate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/matches_participate1"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/matches_participate_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/matches_participate2"
        android:layout_marginBottom="8dp"/>

</LinearLayout>