<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/athletes_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/athletes_id"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/athletes_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/athletes_fname"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/athletes_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/athletes_lname"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/athletes_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/athletes_town"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/athletes_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/athletes_country"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/athletes_sport_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/athletes_sport_id"
        android:layout_marginBottom="8dp"
        />

</LinearLayout>