<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:id="@+id/sports_linear"
    android:clickable="true">

    <TextView
        android:id="@+id/sports_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:hint="@string/sports_id"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/sports_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/sports_name"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/sports_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/sports_category"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/sports_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/sports_gender"
        android:layout_marginBottom="8dp"/>

</LinearLayout>