<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matches.addUpgMatchFragment">


    <ScrollView
        android:id="@+id/match_scl"
        android:layout_width="254dp"
        android:layout_height="447dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/match_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/match_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_date"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="date"
                android:focusable="false"/>

            <EditText
                android:id="@+id/match_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/matchs_town"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <EditText
                android:id="@+id/match_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/match_country"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Spinner
                android:id="@+id/match_sport"
                android:layout_width="match_parent"
                android:layout_height="47dp" />

            <TextView
                android:id="@+id/match_sport_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/match_sport_cat"
                android:orientation="horizontal" />

            <Spinner
                android:id="@+id/match_athlete1"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/match_athlete1_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/match_athlete1_score"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Spinner
                android:id="@+id/match_athlete2"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

            <EditText
                android:id="@+id/match_athlete2_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/match_athlete2_score"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/match_add_athlete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_add_athlete" />

            <Button
                android:id="@+id/match_remove_athlete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_remove_athlete"/>

            <LinearLayout
                android:id="@+id/match_dynamic_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_cnl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/btn_cnl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_scl"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cnl"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_scl"
        app:layout_constraintVertical_bias="0.51" />
</androidx.constraintlayout.widget.ConstraintLayout>