<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="e.lenovo.soccerapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_athlete"
        android:name="e.lenovo.soccerapp.ui.athlete.AthleteFragment"
        android:label="@string/menu_athletes"
        tools:layout="@layout/fragment_athlete" />

    <fragment
        android:id="@+id/nav_team"
        android:name="e.lenovo.soccerapp.ui.team.TeamFragment"
        android:label="@string/menu_teams"
        tools:layout="@layout/fragment_teams" />
</navigation>